update image paths

--- a/_includes/research-item.html
+++ b/_includes/research-item.html
@@ -42,7 +42,7 @@
     <div class="card-image">
       <figure class="image is-2by2">
         <a href="{{ item.url }}">
-          <img src="assets/images/research/{{ item.image }}" alt="{{ item.alttext }}">
+          <img src="assets/images/projects/{{ item.image }}" alt="{{ item.alttext }}">
         </a>
       </figure>
     </div>
