--- a/_includes/volunteering-item.html
+++ b/_includes/volunteering-item.html
@@ -6,7 +6,7 @@
       <div class="card-image">
         <figure class="image is-4by3">
           <a href="{{ item.url }}">
-            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <img src="assets/images/volunteering/{{ item.image }}" alt="Placeholder image">
           </a>
         </figure>
       </div>
