add google verification

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,6 +12,9 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="/assets/js/navbar-burger.js"></script>
     {% seo %}
+     <!-- ownership verification -->
+     <meta name="google-site-verification" content="57XARMphMBaB5W6VfSGBnssTNbU-t5PBeshHrp3V7jE" />
+    <meta name="Description" CONTENT="Hi! I am Julia Kaltenborn and I am using machine learning for climate modeling and cryospheric sciences.">
   </head>
   <body class="has-navbar-fixed-top">
     <div class="topFixedBar"></div>
