--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/mystyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
     <!--{% feed_meta %}-->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="/assets/js/navbar-burger.js"></script>
